# Vapoursynth-areafilter

./: README.md  meson.build
.github/workflows/: Build.yml
areafilter/: areafilter.cpp
